servers/self-hosted/kubernetes-example/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fern-docs
  labels:
    app: fern-docs
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
      nodePort: 30080 # Access via localhost:30080 on Docker Desktop
  selector:
    app: fern-docs
